# Storyboard-Anchored-Generation

./: CORE_TRACE.md  README.md  pyproject.toml  requirements.txt  run.sh  test.json
examples/: input_example.json
src/musubi_tuner/: hv_generate_video.py
src/musubi_tuner/dataset/: image_video_dataset.py
src/musubi_tuner/flux/: flux_utils.py
src/musubi_tuner/networks/: lora.py  lora_qwen_image.py
src/musubi_tuner/qwen_image/: qwen_image_model.py  qwen_image_utils.py
src/musubi_tuner/utils/: lora_utils.py
src/open_infer/: run_infer_json.py
